--- a/app/globals.css
+++ b/app/globals.css
@@ -68,7 +68,7 @@
 
 @layer base {
   * {
-    @apply border border-[#BFBFBF];
+    @apply border-border;
   }
   body {
     @apply bg-background text-foreground;
